# HateSpeech

./: .gitignore  BC.py  FINAL_MODEL_REPORT.md  XGB.py  calibrate.py  ensemble2.py  eval_xgb.py  lr.py  main.py  merge_raw_dataset.py  pyproject.toml  requirements.txt  run_all_balanced.py  run_lr_test.py  run_xgb.py  run_xgb_semantic_test.py  run_xgb_test.py  setence_trf.py  t1.txt  test_bc_ensemble.py  test_bc_fast.py  visuals.py  xgb_semantics.py  xgb_semantics2.py  xgb_tfidf.py
services/: app.py  app2.py
